<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.InfoFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swiperefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:paddingTop="5dp"
            android:id="@+id/strTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            tools:text="Advanced Micro Devices, Inc. (AMD)"
            android:textSize="20sp">
        </TextView>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:weightSum="2">

            <TextView
                android:id="@+id/strPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:textSize="20sp"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/strChange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_gravity="center_horizontal|fill_horizontal"
                android:gravity="center_horizontal|fill_vertical"
                android:layout_weight="1"/>

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textStyle="bold"
                android:textSize="18sp"
                android:padding="5dp"
                android:layout_weight="1"
                />

            <Button
                android:id="@+id/button_toggle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/expand"/>

        </LinearLayout>
        <at.blogc.android.views.ExpandableTextView
            android:id="@+id/expandableTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:maxLines="0"
            android:ellipsize="end"
            android:textAlignment="viewStart"
            android:textStyle="italic"
            app:animation_duration="750"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#c0c0c0"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="4">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/exchange"
                    android:layout_weight="1"
                    android:textStyle="bold">
                </TextView>

                <TextView
                    android:id="@+id/exchangeText"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:layout_weight="1">
                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/currency"
                    android:layout_weight="1"
                    android:textStyle="bold">
                </TextView>

                <TextView
                    android:id="@+id/currencyText"
                    android:layout_marginStart="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                </TextView>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="4">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/country"
                    android:layout_weight="1"
                    android:textStyle="bold">
                </TextView>

                <TextView
                    android:id="@+id/countryText"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sector"
                    android:layout_weight="1"
                    android:textStyle="bold">
                </TextView>

                <TextView
                    android:id="@+id/sectorText"
                    android:layout_marginStart="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                </TextView>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="4">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_52_week_high"
                    android:layout_weight="1"
                    android:textStyle="bold">
                </TextView>

                <TextView
                    android:id="@+id/high52weekText"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_52_week_low"
                    android:layout_weight="1"
                    android:textStyle="bold">
                </TextView>

                <TextView
                    android:id="@+id/low52weekText"
                    android:layout_marginStart="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                </TextView>
            </TableRow>


        </TableLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#c0c0c0"/>

        <TextView
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold|italic"
            android:textSize="20sp"
            android:text="@string/charts">

        </TextView>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">


            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1_day"/>

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1_month"/>



            <com.google.android.material.tabs.TabItem

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1_year"/>


            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_5_years"/>


        </com.google.android.material.tabs.TabLayout>

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/chart1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_margin="10dp"/>

        <LinearLayout
            android:id="@+id/buttonBar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="10"
            android:gravity="center|bottom"
            android:orientation="horizontal"
            android:paddingLeft="4.0dip"
            android:paddingTop="5.0dip"
            android:paddingRight="4.0dip"
            android:paddingBottom="1.0dip"
            >

            <Button
                android:id="@+id/buyButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/buy"/>

            <Button
                android:id="@+id/sellButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:text="@string/sell"/>


        </LinearLayout>


    </LinearLayout>


    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</FrameLayout>