<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.StockFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="10dp"
            app:cardCornerRadius="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_margin="5dp"
                    android:id="@+id/symbol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textColor="@color/purple_500"
                    tools:text="IBM">

                </TextView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/current_price_per_share"
                        android:textSize="16sp">

                    </TextView>
                    <TextView
                        android:id="@+id/tvPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        tools:text = "42.5">
                    </TextView>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/quantity_owned"
                        android:textSize="16sp">

                    </TextView>
                    <TextView
                        android:layout_marginHorizontal="5dp"
                        android:id="@+id/tvAmountOwned"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        tools:text = "4.5">
                    </TextView>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_money_spent"
                        android:textSize="16sp">

                    </TextView>
                    <TextView
                        android:id="@+id/tvTotalMoneySpent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        tools:text = "20,000.12">
                    </TextView>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/current_value"
                        android:textSize="16sp">

                    </TextView>
                    <TextView
                        android:id="@+id/tvCurrentValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        tools:text = "20,400.12">
                    </TextView>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/change_in_value"
                        android:textSize="16sp">

                    </TextView>
                    <TextView
                        android:id="@+id/tvChange"
                        android:layout_marginHorizontal="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        tools:text = "+ $400 (+2%)"
                        android:text = "@string/change_with_variable">
                    </TextView>
                </LinearLayout>
            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stock_history"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="5dp"
            android:textSize="18sp"
            android:textStyle="bold">
        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="10">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:cardElevation="10dp"
                app:cardCornerRadius="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="9">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_marginHorizontal="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="4">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/symbol">

                        </TextView>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/type">

                        </TextView>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/amount">

                        </TextView>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/price">

                        </TextView>


                    </LinearLayout>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="#c0c0c0"/>
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvHistory"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    </androidx.recyclerview.widget.RecyclerView>
                </LinearLayout>



            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/buttonBar"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:weightSum="10"
                android:gravity="center|bottom"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buyButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/buy"/>

                <Button
                    android:id="@+id/sellButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/sell"/>


            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</FrameLayout>