<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.LandingPageFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="10dp"
            app:cardCornerRadius="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp">

            <SearchView
                android:id="@+id/searchView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:iconifiedByDefault="false"
                android:queryHint="Search for stock..."
                android:queryBackground="@null">
            </SearchView>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="10dp"
            app:cardCornerRadius="10dp"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="10dp"
                        android:paddingEnd="0dp"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:text="@string/current_balance"/>
                    <TextView
                        android:id="@+id/balanceText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:text="@string/balance" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <Button
                        android:id="@+id/buttonAddBalance"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/add_to_balance"
                        android:layout_weight="1"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:textSize="11sp">

                    </Button>
                    <Button
                        android:id="@+id/buttonDeductBalance"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/deduct_from_balance"
                        android:layout_weight="1"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:textSize="11sp">

                    </Button>

                </LinearLayout>
            </LinearLayout>



        </androidx.cardview.widget.CardView>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/stocks_owned"
                    android:layout_marginStart="10dp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginTop="5dp">
                </TextView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:cardCornerRadius="2dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvStocksOwned"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="5dp">
                    </androidx.recyclerview.widget.RecyclerView>


                </androidx.cardview.widget.CardView>

        </LinearLayout>


    </LinearLayout>



</FrameLayout>